CASMCMS-7182: Add log level to options endpoint
